# ensemble-chorus

./: .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: DGL.cmake  DPF.cmake  GNUWarnings.cmake  JUCE.cmake  LinkHelpers.cmake  RtAudio.cmake  StaticLinking.cmake
cmake/DPF/: LV2.def  LV2UI.def  VST2.def
plugins/ensemble-chorus/: Artwork.cpp  Artwork.hpp  EnsembleChorusShared.cpp  EnsembleChorusShared.hpp  EnsembleChorusUILayouts.hpp  Makefile  PluginEnsembleChorus.cpp  PluginEnsembleChorus.hpp  UIEnsembleChorus.cpp  UIEnsembleChorus.hpp
plugins/ensemble-chorus/layouts/: Main.fl
plugins/ensemble-chorus/meta/: DistrhoPluginInfo.h
reference/: echo.cpp
reference/triple_chorus/: Clive_Triple_Chorus_UK_BOM.xls  triple_chorus.html
resources/desktop/: ensemble_chorus.desktop
resources/icon/: ensemble_chorus.xpm
resources/lv2/EnsembleChorus.lv2/: EnsembleChorus-noui.ttl  EnsembleChorus.ttl  manifest-noui.ttl.in  manifest.ttl.in  modgui.ttl  presets.ttl
resources/lv2/ensemble_chorus.lv2/: ensemble_chorus.ttl  manifest.ttl.in
resources/ui/images/wave/: sine.gp
ressources/: ensemble-chorus.desktop
sources/core/: bbd.cc  bbd.h  bbd.tcc  bbd_line.cc  bbd_line.h  chorus.cc  chorus.h  core.cc  core_preset.cc  dsp.h  dsp.tcc  lfos.cc  lfos.h  mono.cc  mono.h
sources/core/include/: ensemble_chorus.h
sources/fl/: common.h  main.cc  main_controller.cc  main_controller.h  main_view.cxx  main_view.fl  main_view.h  main_view_impl.cc  message_queue.cc  message_queue.h  messages.cc  messages.h  modulator_visu.cc  modulator_visu.h
sources/fl/images/wave/: ramp.gp  saw.gp  square.gp  triangle.gp
sources/fl/widgets/: Fl_Valuator_Ex.h  Fl_Valuator_Ex.tcc
sources/fl/widgets/Fl_Knob/: README.txt
sources/fl/widgets/Fl_Knob/Fl_Knob/: Fl_Knob.H  Fl_Knob.cxx  Fl_Knob.fld
sources/plugin/: ensemble-chorus.jucer  message_queue.h  message_queue.tcc  messages.h  messages.tcc  processor.cc  processor.h
sources/plugin/Builds/LinuxMakefile/: Makefile
sources/plugin/Builds/MacOSX/: Info-AAX.plist  Info-AU.plist  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
sources/plugin/Builds/MacOSX/ensemble-chorus.xcodeproj/: project.pbxproj
sources/plugin/Builds/VisualStudio2017/: ensemble-chorus.sln  ensemble-chorus_AAX.vcxproj  ensemble-chorus_RTAS.vcxproj  ensemble-chorus_RTAS.vcxproj.filters  ensemble-chorus_SharedCode.vcxproj  ensemble-chorus_SharedCode.vcxproj.filters  ensemble-chorus_StandalonePlugin.vcxproj  ensemble-chorus_VST.vcxproj  ensemble-chorus_VST3.vcxproj  resources.rc
sources/plugin/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
sources/plugin/Source/: LookAndFeel.cpp  LookAndFeel.h  MainComponent.cpp  MainComponent.h  MessageQueue.h  MessageQueue.tcc  Messages.h  Messages.tcc  ModulatorVisu.cpp  ModulatorVisu.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
sources/plugin/Source/utility/: FunctionalTimer.h
sources/plugin/editor/: editor.cc  editor.h  modulation_view.cc  modulation_view.h
sources/plugin/editor/fonts/: Mono-Bold.h  Mono-BoldItalic.h  Mono-Italic.h  Mono-Regular.h  Sans-Bold.h  Sans-BoldItalic.h  Sans-Italic.h  Sans-Regular.h  Serif-Bold.h  Serif-BoldItalic.h  Serif-Italic.h  Serif-Regular.h
sources/plugin/editor/graphics/: box.cc  box.h  colors.h  font.cc  font.h  text.cc  text.h
sources/plugin/editor/widgets/: button.cc  button.h  knob.cc  knob.h  slider.cc  slider.h
sources/plugin/meta/: DistrhoPluginInfo.h
sources/ui/: FontEngine.cpp  FontEngine.h
sources/ui/components/: BasicWidget.cpp  BasicWidget.hpp  LookAndFeel.cpp  LookAndFeel.hpp  Slider.cpp  Slider.hpp  TextLabel.cpp  TextLabel.hpp  ToggleButton.cpp  ToggleButton.hpp  ToggleButtonGroup.cpp  ToggleButtonGroup.hpp
sources/ui/ensemble-chorus/: ModulatorView.cpp  ModulatorView.h
sources/utility/: stdc_memory.h
tools/layout-tool/sources/: layout.h  main.cpp  reader.cpp
